@@ -6,12 +6,13 @@
 
 #include <tchar.h>
 #include <windows.h>
+#include <stdio.h>
 #include <commctrl.h>
-#include "../../../SDK/headers_c/newpluginapi.h"
-#include "../../../SDK/headers_c/m_database.h"
-#include "../../../SDK/headers_c/m_options.h"
-#include "../../../SDK/headers_c/m_langpack.h"
-#include "../../../SDK/headers_c/m_utils.h"
+#include "../../include/newpluginapi.h"
+#include "../../include/m_database.h"
+#include "../../include/m_options.h"
+#include "../../include/m_langpack.h"
+#include "../../include/m_utils.h"
 #include "m_yamn.h"
 #include "m_protoplugin.h"
 #include "m_filterplugin.h"
